; ModuleID = '/home/carl/AnghaBench/postgres/contrib/postgres_fdw/extr_deparse.c_deparseOperatorName.c'
source_filename = "/home/carl/AnghaBench/postgres/contrib/postgres_fdw/extr_deparse.c_deparseOperatorName.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { i64, i32 }

@PG_CATALOG_NAMESPACE = common dso_local global i64 0, align 8
@.str = private unnamed_addr constant [16 x i8] c"OPERATOR(%s.%s)\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i32, %struct.TYPE_3__*)* @deparseOperatorName to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @deparseOperatorName(i32 %0, %struct.TYPE_3__* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.TYPE_3__*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca i8*, align 8
  store i32 %0, i32* %3, align 4
  store %struct.TYPE_3__* %1, %struct.TYPE_3__** %4, align 8
  %7 = load %struct.TYPE_3__*, %struct.TYPE_3__** %4, align 8
  %8 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %7, i32 0, i32 1
  %9 = load i32, i32* %8, align 8
  %10 = call i8* @NameStr(i32 %9)
  store i8* %10, i8** %5, align 8
  %11 = load %struct.TYPE_3__*, %struct.TYPE_3__** %4, align 8
  %12 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %11, i32 0, i32 0
  %13 = load i64, i64* %12, align 8
  %14 = load i64, i64* @PG_CATALOG_NAMESPACE, align 8
  %15 = icmp ne i64 %13, %14
  br i1 %15, label %16, label %26

16:                                               ; preds = %2
  %17 = load %struct.TYPE_3__*, %struct.TYPE_3__** %4, align 8
  %18 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %17, i32 0, i32 0
  %19 = load i64, i64* %18, align 8
  %20 = call i8* @get_namespace_name(i64 %19)
  store i8* %20, i8** %6, align 8
  %21 = load i32, i32* %3, align 4
  %22 = load i8*, i8** %6, align 8
  %23 = call i32 @quote_identifier(i8* %22)
  %24 = load i8*, i8** %5, align 8
  %25 = call i32 @appendStringInfo(i32 %21, i8* getelementptr inbounds ([16 x i8], [16 x i8]* @.str, i64 0, i64 0), i32 %23, i8* %24)
  br label %30

26:                                               ; preds = %2
  %27 = load i32, i32* %3, align 4
  %28 = load i8*, i8** %5, align 8
  %29 = call i32 @appendStringInfoString(i32 %27, i8* %28)
  br label %30

30:                                               ; preds = %26, %16
  ret void
}

declare dso_local i8* @NameStr(i32) #1

declare dso_local i8* @get_namespace_name(i64) #1

declare dso_local i32 @appendStringInfo(i32, i8*, i32, i8*) #1

declare dso_local i32 @quote_identifier(i8*) #1

declare dso_local i32 @appendStringInfoString(i32, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
